--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dave crap wesite</title>
+    <style>
+        body {
+          background-color: aqua;
+        }
+        h1, h2, h3 {
+        color: #36C;
+        font-weight: normal;
+        letter-spacing: .4em;
+        margin-bottom: 1em;
+        text-transform: lowercase;
+        }
+ </style>
 </head>
 <body>
     <h1>This is a heading</h1>
