--- a/index.html
+++ b/index.html
@@ -1,25 +1,124 @@
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dave crap wesite</title>
-    <style>
-        body {
-          background-color: aqua;
-        }
-        h1, h2, h3 {
-        color: #36C;
-        font-weight: normal;
-        letter-spacing: .4em;
-        margin-bottom: 1em;
-        text-transform: lowercase;
-        }
- </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+    crossorigin="anonymous">
+
+  <link rel="stylesheet" href="css/main.css">
+  <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
+  <title>Oscar Wilde</title>
 </head>
+
 <body>
-    <h1>This is a heading</h1>
-    <h2>This is a smaller heading</h2>
-    
+  <header>
+    <div class="menu-btn">
+      <div class="btn-line"></div>
+      <div class="btn-line"></div>
+      <div class="btn-line"></div>
+    </div>
+
+    <nav class="menu">
+      <div class="menu-branding">
+        <div class="portrait"></div>
+      </div>
+      <ul class="menu-nav">
+        <li class="nav-item">
+          <p>Audio controlls</p>
+          <form>           
+            <div>
+              <label for="rate">Speed</label><input type="range" min="0.5" max="2" value="1" step="0.1" id="rate">
+              <div class="rate-value">1</div>
+              <div class="clearfix"></div>
+            </div>
+            <div>
+              <label for="pitch">Pitch</label><input type="range" min="0" max="2" value="1" step="0.1" id="pitch">
+              <div class="pitch-value">1</div>
+              <div class="clearfix"></div>
+            </div>
+            <div>
+              <label for="volume">Volume</label><input type="range" min="0" max="1" value="0.5" step="0.1" id="volume">
+              <div class="volume-value">1</div>
+              <div class="clearfix"></div>
+            </div>
+            <select></select>
+          </form>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <main id="work">
+    <h1 class="lg-heading">
+      Speak
+      <span class="text-secondary">Easy</span>
+    </h1>
+    <h2 class="sm-heading">
+      Some Quotes from Oscar Wilde...
+    </h2>
+    <div class="projects">
+      <div class="item" id="quote1">
+        <a href="#!">
+          <img src="img/projects/project1.jpg" alt="Project">
+        </a>
+        <p class="txt-light">A cynic is a man who knows the price of everything, and the value of nothing.</p>
+        <div class="btn-dark" id="btn1">
+          <i class="fab fa-audible"></i> Play click
+        </div>
+      </div>
+      <div class="item" id="quote2">
+        <a href="#!">
+          <img src="img/projects/project2.jpg" alt="Project">
+        </a>
+        <p class="txt-light">If you want to tell people the truth, make them laugh, otherwise they’ll kill you</p>
+
+        <div  class="btn-dark" id="btn2">
+          <i class="fab fa-audible"></i> Play double click
+        </div>
+      </div>
+      <div class="item long-item" id="quote3" >
+        <a href="#!">
+          <img src="img/projects/project3.jpg" alt="Project">
+        </a>
+        <p class="txt-light">I never travel without my diary. One should always have something sensational to read in the train.</p>
+
+        <a href="#" class="btn-dark" id="btn3">
+          <i class="fab fa-audible"></i> Play long touch
+        </a>
+      </div>
+      <div class="item" id="quote4">
+        <a href="#!">
+          <img src="img/projects/project4.jpg" alt="Project">
+        </a>
+        <p class="txt-light">There is only one thing in the world worse than being talked about, and that is not being talked about.</p>
+
+        <a href="#" class="btn-dark" id="btn4">
+          <i class="fab fa-audible"></i> Play US Male
+        </a>
+      </div>
+      <div class="item" id="quote5">
+        <a href="#!">
+          <img src="img/projects/project5.jpg" alt="Project">
+        </a>
+        <p class="txt-light">We are all in the gutter, but some of us are looking at the stars.</p>
+
+        <a href="#" class="btn-dark" id="btn5">
+          <i class="fab fa-audible"></i> Play US Female
+        </a>
+      </div>
+    </div>
+  </main>
+
+  <footer id="main-footer">
+    Copyright &copy; 2018 <span id="msg"></span>
+  </footer>
+  
+  <script src="js/long-press.js"></script>
+
+  <script src="js/main.js"></script>
 </body>
+
 </html>
